--- a/index.html
+++ b/index.html
@@ -27,9 +27,10 @@
         <img src="https://cdn.freecodecamp.org/curriculum/labs/sea.jpg" alt="South Italy and Islands">
         <figcaption>South Italy and Islands</figcaption>
     </figure>
-    <footer>
-        <p>Nachgebaut vom <a href="https://www.freecodecamp.org/learn/2022/responsive-web-design/learn-html-by-building-a-cat-photo-app/step-69">freeCodeCamp</a></p>
+     <footer>
+        <p> Nachgebaut nach - <a href="www.google.de">freeCodeCamp.org</a></p>
     </footer>
 </body>
 
 </html>
+
